AC-525 Fixed inventory and job navigation issues. Fixed nagging horizontal scroll in dialogs with accordions.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -69,6 +69,10 @@ body {
   font-size: 16px;
 }
 
+.modal-dialog .ui-accordion .ui-accordion-content {
+  overflow: hidden;
+}
+
 .overlay {
   display: none;
   position: absolute;
